--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "forceConsistentCasingInFileNames": true,
     "incremental": true,
+
     "plugins": [
       {
         "name": "next"
@@ -21,6 +23,7 @@
     "paths": {
       "@/*": ["./src/*"]
     }
+    
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
